# mandelbrot

./: .gitignore  Cargo.toml  README.md
benches/: frame_benchmark.rs
src/: lib.rs  main.rs
