[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
colorgrad = "0.6.2"
num-complex = "0.4.5"
pix-engine = "0.8.0"
rayon = "1.9.0"
rust_decimal = "1.34.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
opt-level = 3
