[package]
name = "mandelbrot"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
colorgrad = "0.6.2"
fpdec = { version = "0.10.3", features = ["num-traits"] }
num = "0.4.1"
num-complex = "0.4.5"
num_cpus = "1.16.0"
pix-engine = "0.8.0"
rayon = { version = "1.9.0", optional = true }
rust_decimal = "1.34.3"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[[bench]]
name = "frame_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
opt-level = 3
